[package]
name = "dd_reduce"
version = "0.1.0"
edition = "2021"

[dependencies]
differential-dataflow = {git = "https://github.com/TimelyDataflow/differential-dataflow"}
timely = {git="https://github.com/TimelyDataflow/timely-dataflow"}
serde = {version = "1.0.210", features = ["derive"]}
itertools = "0.13.0"
random-fast-rng = "0.1"
