[package]
name = "dd_reduce"
version = "0.1.0"
edition = "2021"

[dependencies]
differential-dataflow = "0.13.0"
timely = "0.13.0"
serde = {version = "1.0.210", features = ["derive"]}
itertools = "0.13.0"
random-fast-rng = "0.1"
timelyext = {git = "https://github.com/nooberfsh/timelyext"}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"